完成个人资料修改

--- a/src/main/resources/msg/zh_CN/MessageResources.properties
+++ b/src/main/resources/msg/zh_CN/MessageResources.properties
@@ -1,5 +1,5 @@
-common.success=成功
-common.error=失败
+common.success=操作成功
+common.error=操作失败
 common.error.account.locked=账号已锁
 common.error.account.null=账号为空
 common.error.account.captcha=验证码错误
