--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,8 +4,10 @@ log4j.category.org.nutz=DEBUG,A1,file
 log4j.category.org.nutz.dao=DEBUG
 log4j.category.org.nutz.ioc=INFO
 log4j.category.org.nutz.mvc=INFO
-log4j.category.org.apache.shiro.authc.pam=INFO
-log4j.category.org.apache.shiro.web.servlet=INFO
+log4j.category.org.apache.shiro=INFO
+log4j.category.org.brickred.socialauth=INFO
+log4j.category.org.apache.commons=INFO
+log4j.category.org.nutz.resource=INFO
 log4j.additivity.org.nutz = false
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
