--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,6 +8,7 @@ log4j.category.org.apache.shiro=INFO
 log4j.category.org.brickred.socialauth=INFO
 log4j.category.org.apache.commons=INFO
 log4j.category.org.nutz.resource=INFO
+log4j.category.org.quartz=INFO
 log4j.additivity.org.nutz = false
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
